# dotfiles

./: .Xresources  .c.vim.swp  .clang-formatbackup  .gitignore  .nvimrc  .nvimrc.plugged  .prettierrc  .setup_cscope.sh.view  .setup_ubuntu22p04_server.sh.swp  .setup_ubuntu24p04_server.sh.view  .systems_book.sty.view  .systems_book_md.sty.view  .tex.vim.view  .vimrc.custom  .vimrc.normal  .vimrc.plugged  AGENTS.md  CMakeLists.txt  CUDA_Setup.sh  CUDA_Setup_11p1.sh  CUDA_Setup_11p1_arm64.sh  Doxyfile.in  K02tailscale_down  README.md  VIM_Development_Notes.text  build_composite_md_doc.sh  c.snippets  c.vim  c.vim-backup  coc-settings.json  cpp.snippets  cscope_maps.nvim  cscope_maps.vim  dash-to-panel-config  docxtomarkdown.sh  doxygen_header.tex  en.utf-8.add  eslint.config.mjs  git_bad_pack_fix.sh  i3config  (+74 more)
